fixed 0B written files in windows; refs #22348